Revert "Update TestNG with an Irish dance"
This reverts commit 66ab051b4f42e3549db4069ca32bf4e65c87afc4.